// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar snapshots > matches snapshot for clickable avatar 1`] = `
<div>
  <div
    class="avatar avatar--placeholder avatar--clickable"
    style="width: 40px; height: 40px;"
  >
    J
  </div>
</div>
`;

exports[`Avatar snapshots > matches snapshot for image avatar 1`] = `
<div>
  <img
    alt="Jinelle"
    class="avatar avatar--img"
    src="http://localhost:5001/uploads/photo.jpg"
    style="width: 40px; height: 40px;"
  />
</div>
`;

exports[`Avatar snapshots > matches snapshot for placeholder avatar 1`] = `
<div>
  <div
    class="avatar avatar--placeholder"
    style="width: 40px; height: 40px;"
  >
    J
  </div>
</div>
`;
